# gumptionchain

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  SECURITY.md  app.py  pyproject.toml  requirements.txt
.claude/skills/mwg/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/wor/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: security.yml  tests.yml
bench/: rebuild_walk_bench.py
clients/sdk/: MANUAL-VERIFICATION.md  README.md  attestation-cli.mjs  gc-adapters.test.mjs  gc-backup.mjs  gc-backup.test.mjs  gc-bech32.mjs  gc-bech32.test.mjs  gc-bip39.mjs  gc-bip39.test.mjs  gc-crypto.test.mjs  gc-derive.mjs  gc-derive.test.mjs  gc-derived-identity.mjs  gc-derived-identity.test.mjs  gc-envelope.mjs  gc-errors.mjs  gc-keyring.mjs  gc-keyring.test.mjs  gc-message.mjs  gc-message.test.mjs  gc-onboarding.mjs  gc-onboarding.test.mjs  gc-passkey-webauthn.mjs  gc-session-signer.mjs  gc-session-signer.test.mjs  gc-sig.mjs  gc-signing-key.mjs  gc-signing-key.test.mjs  gc-store.mjs  gc-store.test.mjs  gc-transaction.mjs  gc-transaction.test.mjs  index.mjs  index.test.mjs  message-cli.mjs  package.json  passkey-signing-key-demo.html  sign-cli.mjs
clients/sdk/testdata/: gc-attestation-vectors.json  gc-binding-vectors.json  gc-msg-vectors.json  gc-sig-vectors.json
clients/signing-key/: MANUAL-VERIFICATION.md  README.md  gc-attestation.mjs  gc-attestation.test.mjs  gc-backup.mjs  gc-crypto.mjs  gc-keyring.mjs  gc-keyring.test.mjs  gc-onboarding.mjs  gc-onboarding.test.mjs  gc-store.test.mjs  gc-transaction.test.mjs  message-cli.mjs  package.json  passkey-signing-key-demo.html  sign-cli.mjs
clients/signing-key/testdata/: gc-msg-vectors.json  gc-sig-vectors.json
clients/wallet/: MANUAL-VERIFICATION.md  README.md  attestation-cli.mjs  gc-attestation.mjs  gc-attestation.test.mjs  gc-backup.mjs  gc-backup.test.mjs  gc-crypto.mjs  gc-crypto.test.mjs  gc-envelope.mjs  gc-envelope.test.mjs  gc-errors.mjs  gc-keyring.mjs  gc-keyring.test.mjs  gc-message.mjs  gc-message.test.mjs  gc-passkey-webauthn.mjs  gc-sig.mjs  gc-store.mjs  gc-store.test.mjs  gc-transaction.mjs  gc-transaction.test.mjs  gc-wallet.mjs  gc-wallet.test.mjs  index.mjs  index.test.mjs  package.json  passkey-wallet-demo.html  sign-cli.mjs
clients/wallet/testdata/: gc-attestation-vectors.json  gc-binding-vectors.json
deploy/pi/: custom.toml.example  gumptionchain-miller.service  gumptionchain-update.service  gumptionchain-update.timer  install.sh  provision-appliance.sh  update.sh
docs/: README.md  api-auth-protocol.md  api-reference.md  cli-reference.md  client-sdk-reference.md  configuration.md  howto-miller-pi.md  key-onboarding-for-egu-apps.md  node-proxy.md  pi-appliance-runbook.md  running-a-miller.md  social-binding-envelope.md  ui-extension-seam.md
docs/superpowers/: ROADMAP.md
docs/superpowers/audits/: 2026-05-29-verification-pipeline-audit.md  2026-05-31-api-authentication-audit.md  2026-06-01-network-p2p-audit.md  2026-06-02-cli-audit.md  2026-06-02-wallet-crypto-audit.md  2026-06-02-web-audit.md
docs/superpowers/plans/: 2026-05-22-phase-1-tooling-modernization.md  2026-05-24-phase-2-library-upgrades.md  2026-05-24-phase-3-lint-typing-ci-gating.md  2026-05-25-phase-4-marshmallow-to-pydantic.md  2026-05-26-phase-5a-pycryptodome-to-cryptography.md  2026-05-26-phase-5b-requests-to-httpx.md  2026-05-27-phase-6-longest-chain-materialization.md  2026-05-27-phase-6_5-residual-cte-and-is-longest-cache.md  2026-05-28-phase-7a-sa2-syntax.md  2026-05-28-phase-7b-declarative-base.md  (+52 more)
migrations/: env.py
scripts/: benchmark_max_target.py  populate_dev_chain.py  sync_sdk.py  sync_signing_key.py  sync_wallet.py
src/cancelchain/: __init__.py  api.py  api_client.py  application.py  block.py  browser.py  cache.py  chain.py  command.py  config.py  console.py  exceptions.py  miller.py  milling.py  models.py  node.py  payload.py  schema.py  signals.py  signing.py  tasks.py  transaction.py  util.py  wallet.py
src/gumptionchain/: __init__.py  api.py  api_client.py  application.py  attestation.py  bech32.py  bip39.py  bip39_wordlist.py  block.py  browser.py  chain.py  command.py  config.py  console.py  database.py  derive.py  ed25519.py  exceptions.py  message.py  miller.py  milling.py  models.py  node.py  node_proxy.py  payload.py  provenance.py  schema.py  signals.py  signing.py  signing_key.py  sortable.py  static_assets.py  tasks.py  transaction.py  units.py  wallet.py
tests/: .test.env  _sa_helpers.py  conftest.py  test_address_pages.py  test_advanced_page.py  test_api.py  test_api_client.py  test_application.py  test_attestation.py  test_attestation_parity.py  test_attestation_vectors.py  test_auth_audit.py  test_base_template.py  test_bech32.py  test_bip39.py  test_bip39_parity.py  test_block.py  test_block_view.py  test_blocks_page.py  test_browser.py  test_browser_signing_key_parity.py  test_browser_signing_key_vectors.py  test_browser_wallet_parity.py  test_browser_wallet_vectors.py  test_chain.py  test_chains_page.py  test_cli_audit.py  test_command.py  test_config.py  test_consensus_constants.py  test_deploy_pi.py  test_derive.py  test_derive_parity.py  test_ed25519_vectors.py  test_ed25519_verifier.py  test_encode_subject_parity.py  test_forward_sync.py  test_home_page.py  test_mempool_page.py  test_mempool_prune.py  (+47 more)
tests/fixtures/: bip39_vectors.json  derive_vectors.json  gen_txn_fixtures.py  txn_signing_vectors.json
(+140 files in other folders)
