[build-system]
requires = ["uv_build>=0.5,<1.0"]
build-backend = "uv_build"

# PROJECT
[project]
name = "cancelchain"
version = "1.4.1"
description = "A Blockchain of Accountability, Forgiveness, and Support"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Thomas Bohmbach Jr", email = "tom@cancelchain.org" }
]
keywords = [
  "blockchain",
  "flask",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Flask",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Sociology",
  "Operating System :: OS Independent",
]
dependencies = [
  "base58check>=1.0",
  "blinker>=1.6",
  "celery>=5.3",
  "click>=8.1",
  "Flask>=3.0",
  "Flask-Caching>=2.3",
  "Flask-SQLAlchemy>=3.1",
  "gunicorn>=20.1",
  "humanfriendly>=10.0",
  "marshmallow>=3.19",
  "millify>=0.1",
  "passlib[argon2]>=1.7",
  "pg8000>=1.29",
  "pycryptodome>=3.18",
  "pyjwt>=2.7",
  "pymerkle>=4.0,<5.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "rich>=13.4",
  "sqlalchemy>=2.0",
  "werkzeug>=3.0",
]

[project.scripts]
cancelchain = "cancelchain:cli"

[project.urls]
Homepage = "https://cancelchain.org"
Documentation = "https://docs.cancelchain.org"
Source = "https://github.com/gumptionthomas/cancelchain"
Tracker = "https://github.com/gumptionthomas/cancelchain/issues"

# DEPENDENCY GROUPS (PEP 735)
[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-dotenv>=0.5",
  "requests-mock>=1.12",
  "time-machine>=2.14",
  "coverage[toml]>=7.5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

# RUFF
[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "A002",
  "A003",
  "B904",
  "C901",
  "DTZ007",
  "FBT002",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "Q000",
  "S101",
  "S105",
  "S110",
]

[tool.ruff.format]
quote-style = "single"

# PYTEST
[tool.pytest.ini_options]
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore:.*SelectableGroups dict interface is deprecated.*"
]
env_files = [
  "tests/.test.env",
]
env_override_existing_values = 1

# COVERAGE
[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]

# MYPY
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
files = ["src/cancelchain"]
